--- a/practice/labs/portswigger/14.authentication.md
+++ b/practice/labs/portswigger/14.authentication.md
@@ -1,4 +1,3 @@
-## Password based
 ### [Username enumeration via different responses](https://portswigger.net/web-security/authentication/password-based/lab-username-enumeration-via-different-responses)
 
 - Fuzz the username using the username list provided in the lab.
@@ -6,12 +5,20 @@
 - Fuzz the password using password list provided in the lab.
 - Get valid username and password combination from the request which results in 302 status code.
 
+
+### [2FA simple bypass](https://portswigger.net/web-security/authentication/multi-factor/lab-2fa-simple-bypass)
+
+
+### [Password reset broken logic](https://portswigger.net/web-security/authentication/other-mechanisms/lab-password-reset-broken-logic)
+
+
 ### [Username enumeration via subtly different responses](https://portswigger.net/web-security/authentication/password-based/lab-username-enumeration-via-subtly-different-responses)
 
 - Fuzz the username using the username list provided in the lab.
 - Get valid username from the request with `Incorrect username or password` instead of `Incorrect username or password.` in the response body. Note the `.` at the end.
 - Fuzz the password using password list provided in the lab.
 - Get valid username and password combination from the request which results in 302 status code.
+
 
 ### [Username enumeration via response timing](https://portswigger.net/web-security/authentication/password-based/lab-username-enumeration-via-response-timing)
 
@@ -26,3 +33,32 @@
 - Generate the username list and password list by alternating the known attackers credentials and the unknown victim's credentials.
 - Fuzz the username and password using generated lists.
 - Get valid username and password combination from the request which results in 302 status code.
+
+
+### [Username enumeration via account lock](https://portswigger.net/web-security/authentication/password-based/lab-username-enumeration-via-account-lock)
+
+- Fuzz the username and find the username from the request with `too many attempts` in the response.
+- Fuzz the password and find the password using the request which does not have any error message in the response.
+
+- Login after the wait time is completed.
+
+
+### [2FA broken logic](https://portswigger.net/web-security/authentication/multi-factor/lab-2fa-broken-logic)
+
+
+### [Brute-forcing a stay-logged-in cookie](https://portswigger.net/web-security/authentication/other-mechanisms/lab-brute-forcing-a-stay-logged-in-cookie)
+
+
+### [Offline password cracking](https://portswigger.net/web-security/authentication/other-mechanisms/lab-offline-password-cracking)
+
+
+### [Password reset poisoning via middleware](https://portswigger.net/web-security/authentication/other-mechanisms/lab-password-reset-poisoning-via-middleware)
+
+
+### [Password brute-force via password change](https://portswigger.net/web-security/authentication/other-mechanisms/lab-password-brute-force-via-password-change)
+
+
+### [Broken brute-force protection, multiple credentials per request](https://portswigger.net/web-security/authentication/password-based/lab-broken-brute-force-protection-multiple-credentials-per-request)
+
+
+### [2FA bypass using a brute-force attack](https://portswigger.net/web-security/authentication/multi-factor/lab-2fa-bypass-using-a-brute-force-attack)
