--- a/practice/labs/portswigger/01.sql-injection.md
+++ b/practice/labs/portswigger/01.sql-injection.md
@@ -1,5 +1,8 @@
 [x] [SQL injection vulnerability in WHERE clause allowing retrieval of hidden data](https://portswigger.net/web-security/sql-injection/lab-retrieve-hidden-data)
 
+
+[x] test 
+
 [ ] [SQL injection vulnerability allowing login bypass](https://portswigger.net/web-security/sql-injection/lab-login-bypass)
 
 
